CRASH Eyedropper operator crash blender #66524

Closed
opened 2019-07-07 13:14:09 +02:00 by Jordi · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f
Worked: (optional)

Short description of error
Eyedropper operator from brush menu, when gradient is activated, crash blender

Exact steps for others to reproduce the error
See attached file.
Just go to texture paint, with an object with a texture ready to be painted, and open the brush popover on tool settings.
Then activate the gradient mode, and on the color ramp settings, open the little down arrow dropdown and select the eyedropper operator, then blender crash.
Texture_Paint_Gradient_Fill_Eyedropper_Bug.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` Worked: (optional) **Short description of error** Eyedropper operator from brush menu, when gradient is activated, crash blender **Exact steps for others to reproduce the error** See attached file. Just go to texture paint, with an object with a texture ready to be painted, and open the brush popover on tool settings. Then activate the gradient mode, and on the color ramp settings, open the little down arrow dropdown and select the eyedropper operator, then blender crash. [Texture_Paint_Gradient_Fill_Eyedropper_Bug.blend](https://archive.blender.org/developer/F7571416/Texture_Paint_Gradient_Fill_Eyedropper_Bug.blend)
Author

Added subscriber: @JVM

Added subscriber: @JVM
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Campbell Barton was assigned by Philipp Oeser 2019-07-08 10:41:21 +02:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Seems like ui_context_button_active cant get a button from a menu in a popover.
Same is true if you do this from the panel in the View3D sidebar.
The region uiblocks is just empty in that case.

Seems like this was being addressed in b749e43cd3 [added ctx pointer to color_ramp to work around the button not being available] but this fix seems incomplete?

code in eyedropper_colorband_init still needs the button to do:

eye->ptr = ((Colorband_RNAUpdateCb *)but->func_argN)->ptr;
eye->prop = ((Colorband_RNAUpdateCb *)but->func_argN)->prop;
eye->is_undo = UI_but_flag_is_set(but, UI_BUT_UNDO);

@ideasman42: mind checking?

Seems like `ui_context_button_active` cant get a button from a menu in a popover. Same is true if you do this from the panel in the View3D sidebar. The region uiblocks is just empty in that case. Seems like this was being addressed in b749e43cd3 [added ctx pointer to `color_ramp` to work around the button not being available] but this fix seems incomplete? code in `eyedropper_colorband_init` still needs the button to do: ``` eye->ptr = ((Colorband_RNAUpdateCb *)but->func_argN)->ptr; eye->prop = ((Colorband_RNAUpdateCb *)but->func_argN)->prop; eye->is_undo = UI_but_flag_is_set(but, UI_BUT_UNDO); ``` @ideasman42: mind checking?

This issue was referenced by 90dae36213

This issue was referenced by 90dae36213316b338cbe6b31c41c746ee7a69b8e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66524
No description provided.