Fix T66524: Eyedropper in popover crashes